include(FetchContent)
FetchContent_Declare(
    googletest
    URL https://github.com/google/googletest/archive/refs/tags/v1.15.2.tar.gz
    URL_HASH SHA256=7b42b4d6ed48810c5362c265a17faebe90dc2373c885e5216439d37927f02926
)
FetchContent_MakeAvailable(googletest)

include(GoogleTest)

function(add_unit_test name)
    add_executable(${name} src/unit/${name}.cpp)
    target_link_libraries(${name} PRIVATE deltahdl_lib GTest::gtest_main)
    gtest_discover_tests(${name})
endfunction()

add_unit_test(test_const_eval_clause_06_20)
add_unit_test(test_const_eval_clause_06_20_04)
add_unit_test(test_const_eval_clause_11_04_03)
add_unit_test(test_const_eval_clause_11_04_07)
add_unit_test(test_const_eval_clause_11_04_11)
add_unit_test(test_const_eval_clause_11_04_12)
add_unit_test(test_const_eval_clause_20_06_02)
add_unit_test(test_const_eval_clause_20_08_01)
add_unit_test(test_const_eval_clause_20_09)
add_unit_test(test_const_eval_f)
add_unit_test(test_coverage_clause_19_03)
add_unit_test(test_coverage_clause_19_04)
add_unit_test(test_coverage_clause_19_05)
add_unit_test(test_coverage_clause_19_05_01)
add_unit_test(test_coverage_clause_19_05_04)
add_unit_test(test_coverage_clause_19_05_05)
add_unit_test(test_coverage_clause_19_05_06)
add_unit_test(test_coverage_clause_19_05_07)
add_unit_test(test_coverage_clause_19_06)
add_unit_test(test_coverage_clause_19_06_01)
add_unit_test(test_coverage_clause_19_07)
add_unit_test(test_coverage_clause_19_08)
add_unit_test(test_coverage_clause_19_09)
add_unit_test(test_coverage_clause_19_11)
add_unit_test(test_crv_clause_18_04)
add_unit_test(test_crv_clause_18_05)
add_unit_test(test_crv_clause_18_05_03)
add_unit_test(test_crv_clause_18_05_04)
add_unit_test(test_crv_clause_18_05_05)
add_unit_test(test_crv_clause_18_05_06)
add_unit_test(test_crv_clause_18_05_07)
add_unit_test(test_crv_clause_18_05_13)
add_unit_test(test_crv_clause_18_06)
add_unit_test(test_crv_clause_18_07)
add_unit_test(test_crv_clause_18_08)
add_unit_test(test_crv_clause_18_09)
add_unit_test(test_crv_clause_18_12)
add_unit_test(test_crv_clause_18_17)
add_unit_test(test_elaboration_annex_a_06_03)
add_unit_test(test_elaboration_annex_a_06_04)
add_unit_test(test_elaboration_annex_a_06_07_01)
add_unit_test(test_elaboration_annex_a_06_08)
add_unit_test(test_elaboration_annex_a_06_09)
add_unit_test(test_elaboration_annex_a_06_10)
add_unit_test(test_elaboration_annex_a_06_11)
add_unit_test(test_elaboration_annex_a_06_12)
add_unit_test(test_elaboration_annex_a_07_01)
add_unit_test(test_elaboration_annex_a_07_02)
add_unit_test(test_elaboration_annex_a_07_03)
add_unit_test(test_elaboration_annex_a_07_04)
add_unit_test(test_elaboration_annex_a_07_05)
add_unit_test(test_elaboration_annex_a_07_05_01)
add_unit_test(test_elaboration_annex_a_07_05_02)
add_unit_test(test_elaboration_annex_a_07_05_03)
add_unit_test(test_elaboration_annex_a_08_01)
add_unit_test(test_elaboration_annex_a_08_02)
add_unit_test(test_elaboration_annex_a_08_03)
add_unit_test(test_elaboration_annex_a_08_04)
add_unit_test(test_elaboration_annex_a_08_05)
add_unit_test(test_elaboration_annex_a_08_06)
add_unit_test(test_elaboration_annex_a_08_07)
add_unit_test(test_elaboration_clause_03_12_01)
add_unit_test(test_elaboration_clause_03_13)
add_unit_test(test_elaboration_clause_05_11)
add_unit_test(test_elaboration_clause_06_05)
add_unit_test(test_elaboration_clause_06_06_08)
add_unit_test(test_elaboration_clause_06_07)
add_unit_test(test_elaboration_clause_06_07_01)
add_unit_test(test_elaboration_clause_06_08)
add_unit_test(test_elaboration_clause_06_10)
add_unit_test(test_elaboration_clause_06_12)
add_unit_test(test_elaboration_clause_06_14)
add_unit_test(test_elaboration_clause_06_18)
add_unit_test(test_elaboration_clause_06_19)
add_unit_test(test_elaboration_clause_06_19_03)
add_unit_test(test_elaboration_clause_06_19_05_01)
add_unit_test(test_elaboration_clause_06_19_05_02)
add_unit_test(test_elaboration_clause_06_19_05_03)
add_unit_test(test_elaboration_clause_06_19_05_04)
add_unit_test(test_elaboration_clause_06_19_05_05)
add_unit_test(test_elaboration_clause_06_19_05_06)
add_unit_test(test_elaboration_clause_06_20)
add_unit_test(test_elaboration_clause_06_20_05)
add_unit_test(test_elaboration_clause_06_20_06)
add_unit_test(test_elaboration_clause_06_25)
add_unit_test(test_elaboration_clause_07_02_02)
add_unit_test(test_elaboration_clause_07_02a)
add_unit_test(test_elaboration_clause_07_02b)
add_unit_test(test_elaboration_clause_07_03_01)
add_unit_test(test_elaboration_clause_07_07)
add_unit_test(test_elaboration_clause_07_12_02)
add_unit_test(test_elaboration_clause_09_02_02_02)
add_unit_test(test_elaboration_clause_09_04_02)
add_unit_test(test_elaboration_clause_10_09_02a)
add_unit_test(test_elaboration_clause_10_09_02b)
add_unit_test(test_elaboration_clause_10_09a)
add_unit_test(test_elaboration_clause_10_09b)
add_unit_test(test_elaboration_clause_11_04_03)
add_unit_test(test_elaboration_clause_11_04_05)
add_unit_test(test_elaboration_clause_11_04_07)
add_unit_test(test_elaboration_clause_11_04_08)
add_unit_test(test_elaboration_clause_11_04_10)
add_unit_test(test_elaboration_clause_11_04_11)
add_unit_test(test_elaboration_clause_11_04_12)
add_unit_test(test_elaboration_clause_11_06)
add_unit_test(test_elaboration_clause_12_06)
add_unit_test(test_elaboration_clause_17_02)
add_unit_test(test_elaboration_clause_17_03)
add_unit_test(test_elaboration_clause_17_07)
add_unit_test(test_elaboration_clause_20_06_02)
add_unit_test(test_elaboration_clause_20_08_01)
add_unit_test(test_elaboration_clause_20_09)
add_unit_test(test_elaboration_clause_22_08)
add_unit_test(test_elaboration_clause_23_03)
add_unit_test(test_elaboration_clause_23_10_01)
add_unit_test(test_elaboration_clause_24_03)
add_unit_test(test_elaboration_clause_27_04)
add_unit_test(test_elaboration_clause_28_02)
add_unit_test(test_elaboration_clause_28_16)
add_unit_test(test_lexer_annex_b)
add_unit_test(test_lexer_clause_05)
add_unit_test(test_lexer_clause_05_02)
add_unit_test(test_lexer_clause_05_03)
add_unit_test(test_lexer_clause_05_04)
add_unit_test(test_lexer_clause_05_06)
add_unit_test(test_lexer_clause_05_06_01)
add_unit_test(test_lexer_clause_05_06_03)
add_unit_test(test_lexer_clause_05_06_04)
add_unit_test(test_lexer_clause_05_07_01)
add_unit_test(test_lexer_clause_05_09)
add_unit_test(test_lexer_clause_05_09_01)
add_unit_test(test_lexer_clause_05_12)
add_unit_test(test_lexer_clause_06_20_07)
add_unit_test(test_lexer_clause_11_04_13)
add_unit_test(test_lexer_clause_11_05_01)
add_unit_test(test_lexer_clause_22_14)
add_unit_test(test_lexer_clause_30_04_02)
add_unit_test(test_non_lrm_aggregate_e)
add_unit_test(test_non_lrm_aig)
add_unit_test(test_non_lrm_aig_opt)
add_unit_test(test_non_lrm_assertion)
add_unit_test(test_non_lrm_assertion_monitor)
add_unit_test(test_non_lrm_cell_map)
add_unit_test(test_non_lrm_clause_non_lrma)
add_unit_test(test_non_lrm_clause_non_lrmb)
add_unit_test(test_non_lrm_clause_non_lrmc)
add_unit_test(test_non_lrm_clause_non_lrmd)
add_unit_test(test_non_lrm_compiled_process)
add_unit_test(test_non_lrm_const_eval)
add_unit_test(test_non_lrm_eval_advanced)
add_unit_test(test_non_lrm_eval_operators_xz)
add_unit_test(test_non_lrm_liberty)
add_unit_test(test_non_lrm_lut_map)
add_unit_test(test_non_lrm_mem_infer)
add_unit_test(test_non_lrm_queue_ref)
add_unit_test(test_non_lrm_scheduler)
add_unit_test(test_non_lrm_sv_callable)
add_unit_test(test_non_lrm_vpi)
add_unit_test(test_parser_annex_a_01)
add_unit_test(test_parser_annex_a_01_02)
add_unit_test(test_parser_annex_a_01_03)
add_unit_test(test_parser_annex_a_01_04)
add_unit_test(test_parser_annex_a_02)
add_unit_test(test_parser_annex_a_02_01_01)
add_unit_test(test_parser_annex_a_02_01_02)
add_unit_test(test_parser_annex_a_02_01_03)
add_unit_test(test_parser_annex_a_02_02_01)
add_unit_test(test_parser_annex_a_02_02_02)
add_unit_test(test_parser_annex_a_02_02_03)
add_unit_test(test_parser_annex_a_02_03)
add_unit_test(test_parser_annex_a_02_04)
add_unit_test(test_parser_annex_a_02_05)
add_unit_test(test_parser_annex_a_02_06)
add_unit_test(test_parser_annex_a_02_07)
add_unit_test(test_parser_annex_a_02_08)
add_unit_test(test_parser_annex_a_02_09)
add_unit_test(test_parser_annex_a_02_10a)
add_unit_test(test_parser_annex_a_02_10b)
add_unit_test(test_parser_annex_a_02_11a)
add_unit_test(test_parser_annex_a_02_11b)
add_unit_test(test_parser_annex_a_02_12)
add_unit_test(test_parser_annex_a_03)
add_unit_test(test_parser_annex_a_03_01a)
add_unit_test(test_parser_annex_a_03_01b)
add_unit_test(test_parser_annex_a_03_02)
add_unit_test(test_parser_annex_a_03_03)
add_unit_test(test_parser_annex_a_03_04)
add_unit_test(test_parser_annex_a_04)
add_unit_test(test_parser_annex_a_04_01_01)
add_unit_test(test_parser_annex_a_04_01_02)
add_unit_test(test_parser_annex_a_04_01_03)
add_unit_test(test_parser_annex_a_04_01_04)
add_unit_test(test_parser_annex_a_04_02)
add_unit_test(test_parser_annex_a_05)
add_unit_test(test_parser_annex_a_05_01)
add_unit_test(test_parser_annex_a_05_02)
add_unit_test(test_parser_annex_a_05_03a)
add_unit_test(test_parser_annex_a_05_03b)
add_unit_test(test_parser_annex_a_05_04)
add_unit_test(test_parser_annex_a_06_01)
add_unit_test(test_parser_annex_a_06_02a)
add_unit_test(test_parser_annex_a_06_02b)
add_unit_test(test_parser_annex_a_06_03)
add_unit_test(test_parser_annex_a_06_04)
add_unit_test(test_parser_annex_a_06_05)
add_unit_test(test_parser_annex_a_06_06)
add_unit_test(test_parser_annex_a_06_07)
add_unit_test(test_parser_annex_a_06_07_01)
add_unit_test(test_parser_annex_a_06_08)
add_unit_test(test_parser_annex_a_06_09)
add_unit_test(test_parser_annex_a_06_10)
add_unit_test(test_parser_annex_a_06_11)
add_unit_test(test_parser_annex_a_06_12)
add_unit_test(test_parser_annex_a_07)
add_unit_test(test_parser_annex_a_07_01)
add_unit_test(test_parser_annex_a_07_02)
add_unit_test(test_parser_annex_a_07_03)
add_unit_test(test_parser_annex_a_07_04)
add_unit_test(test_parser_annex_a_07_05)
add_unit_test(test_parser_annex_a_07_05_01)
add_unit_test(test_parser_annex_a_07_05_02)
add_unit_test(test_parser_annex_a_07_05_03)
add_unit_test(test_parser_annex_a_08)
add_unit_test(test_parser_annex_a_08_01)
add_unit_test(test_parser_annex_a_08_02)
add_unit_test(test_parser_annex_a_08_03)
add_unit_test(test_parser_annex_a_08_04)
add_unit_test(test_parser_annex_a_08_05)
add_unit_test(test_parser_annex_a_08_06)
add_unit_test(test_parser_annex_a_08_07)
add_unit_test(test_parser_annex_a_09)
add_unit_test(test_parser_annex_d)
add_unit_test(test_parser_annex_e_02)
add_unit_test(test_parser_annex_e_04)
add_unit_test(test_parser_annex_e_07)
add_unit_test(test_parser_annex_f)
add_unit_test(test_parser_annex_h)
add_unit_test(test_parser_clause_03_02)
add_unit_test(test_parser_clause_03_03)
add_unit_test(test_parser_clause_03_04)
add_unit_test(test_parser_clause_03_05)
add_unit_test(test_parser_clause_03_06)
add_unit_test(test_parser_clause_03_07)
add_unit_test(test_parser_clause_03_08)
add_unit_test(test_parser_clause_03_09)
add_unit_test(test_parser_clause_03_10)
add_unit_test(test_parser_clause_03_11)
add_unit_test(test_parser_clause_03_12)
add_unit_test(test_parser_clause_03_12_01)
add_unit_test(test_parser_clause_03_13)
add_unit_test(test_parser_clause_03_14_01)
add_unit_test(test_parser_clause_03_14_02)
add_unit_test(test_parser_clause_03_14_02_01)
add_unit_test(test_parser_clause_03_14_02_02)
add_unit_test(test_parser_clause_03_14_02_03)
add_unit_test(test_parser_clause_03_14_03)
add_unit_test(test_parser_clause_03_14a)
add_unit_test(test_parser_clause_03_14b)
add_unit_test(test_parser_clause_04_05)
add_unit_test(test_parser_clause_04_06)
add_unit_test(test_parser_clause_04_09_03)
add_unit_test(test_parser_clause_04_09_04)
add_unit_test(test_parser_clause_05)
add_unit_test(test_parser_clause_05_01)
add_unit_test(test_parser_clause_05_03)
add_unit_test(test_parser_clause_05_05)
add_unit_test(test_parser_clause_05_06)
add_unit_test(test_parser_clause_05_06_01)
add_unit_test(test_parser_clause_05_06_02)
add_unit_test(test_parser_clause_05_06_03)
add_unit_test(test_parser_clause_05_07_01)
add_unit_test(test_parser_clause_05_07_02)
add_unit_test(test_parser_clause_05_08)
add_unit_test(test_parser_clause_05_09)
add_unit_test(test_parser_clause_05_09_01)
add_unit_test(test_parser_clause_05_10)
add_unit_test(test_parser_clause_05_11)
add_unit_test(test_parser_clause_05_12)
add_unit_test(test_parser_clause_05_13)
add_unit_test(test_parser_clause_06_06_07)
add_unit_test(test_parser_clause_06_11)
add_unit_test(test_parser_clause_06_12)
add_unit_test(test_parser_clause_06_16)
add_unit_test(test_parser_clause_06_17)
add_unit_test(test_parser_clause_06_19)
add_unit_test(test_parser_clause_06a)
add_unit_test(test_parser_clause_06b)
add_unit_test(test_parser_clause_06c)
add_unit_test(test_parser_clause_06d)
add_unit_test(test_parser_clause_06j)
add_unit_test(test_parser_clause_07_02)
add_unit_test(test_parser_clause_07_03)
add_unit_test(test_parser_clause_07a)
add_unit_test(test_parser_clause_07b)
add_unit_test(test_parser_clause_07c)
add_unit_test(test_parser_clause_08_03)
add_unit_test(test_parser_clause_08_05)
add_unit_test(test_parser_clause_08_06)
add_unit_test(test_parser_clause_08_13)
add_unit_test(test_parser_clause_08_18)
add_unit_test(test_parser_clause_08_21)
add_unit_test(test_parser_clause_08a)
add_unit_test(test_parser_clause_08b)
add_unit_test(test_parser_clause_09_02_01)
add_unit_test(test_parser_clause_09_02_02)
add_unit_test(test_parser_clause_09_02_03)
add_unit_test(test_parser_clause_09_03_01)
add_unit_test(test_parser_clause_09_04_02)
add_unit_test(test_parser_clause_09_04_03)
add_unit_test(test_parser_clause_09_06_02)
add_unit_test(test_parser_clause_09a)
add_unit_test(test_parser_clause_09b)
add_unit_test(test_parser_clause_09c)
add_unit_test(test_parser_clause_10_03a)
add_unit_test(test_parser_clause_10_03b)
add_unit_test(test_parser_clause_10_09)
add_unit_test(test_parser_clause_10a)
add_unit_test(test_parser_clause_10b)
add_unit_test(test_parser_clause_11_03)
add_unit_test(test_parser_clause_11_12)
add_unit_test(test_parser_clause_11a)
add_unit_test(test_parser_clause_11b)
add_unit_test(test_parser_clause_11c)
add_unit_test(test_parser_clause_11d)
add_unit_test(test_parser_clause_12_07_05)
add_unit_test(test_parser_clause_12_08)
add_unit_test(test_parser_clause_12a)
add_unit_test(test_parser_clause_12b)
add_unit_test(test_parser_clause_13_03)
add_unit_test(test_parser_clause_13_04)
add_unit_test(test_parser_clause_13a)
add_unit_test(test_parser_clause_14)
add_unit_test(test_parser_clause_15)
add_unit_test(test_parser_clause_15_05_02)
add_unit_test(test_parser_clause_16a)
add_unit_test(test_parser_clause_16b)
add_unit_test(test_parser_clause_17)
add_unit_test(test_parser_clause_17_02)
add_unit_test(test_parser_clause_17_03)
add_unit_test(test_parser_clause_17_05)
add_unit_test(test_parser_clause_17_06)
add_unit_test(test_parser_clause_17_07)
add_unit_test(test_parser_clause_17_08)
add_unit_test(test_parser_clause_18a)
add_unit_test(test_parser_clause_18b)
add_unit_test(test_parser_clause_19)
add_unit_test(test_parser_clause_20a)
add_unit_test(test_parser_clause_20b)
add_unit_test(test_parser_clause_21)
add_unit_test(test_parser_clause_22_03)
add_unit_test(test_parser_clause_22_05)
add_unit_test(test_parser_clause_22_06)
add_unit_test(test_parser_clause_22_07)
add_unit_test(test_parser_clause_22_08)
add_unit_test(test_parser_clause_22_09)
add_unit_test(test_parser_clause_22_10)
add_unit_test(test_parser_clause_22_13)
add_unit_test(test_parser_clause_22_14)
add_unit_test(test_parser_clause_23_02_02)
add_unit_test(test_parser_clause_23_02a)
add_unit_test(test_parser_clause_23_02b)
add_unit_test(test_parser_clause_23_10_01)
add_unit_test(test_parser_clause_23a)
add_unit_test(test_parser_clause_23b)
add_unit_test(test_parser_clause_24)
add_unit_test(test_parser_clause_24_03a)
add_unit_test(test_parser_clause_24_03b)
add_unit_test(test_parser_clause_24_07)
add_unit_test(test_parser_clause_25)
add_unit_test(test_parser_clause_25_03)
add_unit_test(test_parser_clause_25_04)
add_unit_test(test_parser_clause_25_05)
add_unit_test(test_parser_clause_26)
add_unit_test(test_parser_clause_26_02)
add_unit_test(test_parser_clause_26_03a)
add_unit_test(test_parser_clause_26_03b)
add_unit_test(test_parser_clause_27)
add_unit_test(test_parser_clause_27_03)
add_unit_test(test_parser_clause_27_04)
add_unit_test(test_parser_clause_27_05)
add_unit_test(test_parser_clause_28_03_02)
add_unit_test(test_parser_clause_28_03_03)
add_unit_test(test_parser_clause_28_03_05)
add_unit_test(test_parser_clause_28_03a)
add_unit_test(test_parser_clause_28_03b)
add_unit_test(test_parser_clause_28_04a)
add_unit_test(test_parser_clause_28_04b)
add_unit_test(test_parser_clause_28_05a)
add_unit_test(test_parser_clause_28_05b)
add_unit_test(test_parser_clause_28_06a)
add_unit_test(test_parser_clause_28_06b)
add_unit_test(test_parser_clause_28_07a)
add_unit_test(test_parser_clause_28_07b)
add_unit_test(test_parser_clause_28_08a)
add_unit_test(test_parser_clause_28_08b)
add_unit_test(test_parser_clause_28_09a)
add_unit_test(test_parser_clause_28_09b)
add_unit_test(test_parser_clause_28_10a)
add_unit_test(test_parser_clause_28_10b)
add_unit_test(test_parser_clause_28_16)
add_unit_test(test_parser_clause_29_03)
add_unit_test(test_parser_clause_29_03_06)
add_unit_test(test_parser_clause_29_04)
add_unit_test(test_parser_clause_29_05)
add_unit_test(test_parser_clause_29_07)
add_unit_test(test_parser_clause_29_09)
add_unit_test(test_parser_clause_30_02)
add_unit_test(test_parser_clause_30_03a)
add_unit_test(test_parser_clause_30_03b)
add_unit_test(test_parser_clause_30_04a)
add_unit_test(test_parser_clause_30_04b)
add_unit_test(test_parser_clause_30_05a)
add_unit_test(test_parser_clause_30_05b)
add_unit_test(test_parser_clause_30_07a)
add_unit_test(test_parser_clause_30_07b)
add_unit_test(test_parser_clause_31_03a)
add_unit_test(test_parser_clause_31_03b)
add_unit_test(test_parser_clause_31_04a)
add_unit_test(test_parser_clause_31_04b)
add_unit_test(test_parser_clause_31_06a)
add_unit_test(test_parser_clause_31_06b)
add_unit_test(test_parser_clause_31_07)
add_unit_test(test_parser_clause_31_09)
add_unit_test(test_parser_clause_33)
add_unit_test(test_parser_clause_33_03)
add_unit_test(test_parser_clause_33_04a)
add_unit_test(test_parser_clause_33_04b)
add_unit_test(test_parser_clause_34)
add_unit_test(test_parser_clause_35a)
add_unit_test(test_parser_clause_36a)
add_unit_test(test_parser_clause_38)
add_unit_test(test_parser_clause_39)
add_unit_test(test_parser_clause_40)
add_unit_test(test_preprocessor_clause_22)
add_unit_test(test_preprocessor_clause_22_03)
add_unit_test(test_preprocessor_clause_22_04)
add_unit_test(test_preprocessor_clause_22_05)
add_unit_test(test_preprocessor_clause_22_06)
add_unit_test(test_preprocessor_clause_22_07)
add_unit_test(test_preprocessor_clause_22_08)
add_unit_test(test_preprocessor_clause_22_09)
add_unit_test(test_preprocessor_clause_22_10)
add_unit_test(test_preprocessor_clause_22_11)
add_unit_test(test_preprocessor_clause_22_12)
add_unit_test(test_preprocessor_clause_22_13)
add_unit_test(test_preprocessor_clause_22_14)
add_unit_test(test_preprocessor_clause_34_04)
add_unit_test(test_preprocessor_clause_34_05)
add_unit_test(test_sdf_clause_32_03)
add_unit_test(test_sdf_clause_32_04)
add_unit_test(test_sdf_clause_32_08)
add_unit_test(test_simulation_annex_a_06_03)
add_unit_test(test_simulation_annex_a_06_04)
add_unit_test(test_simulation_annex_a_06_05)
add_unit_test(test_simulation_annex_a_06_06)
add_unit_test(test_simulation_annex_a_06_07)
add_unit_test(test_simulation_annex_a_06_07_01)
add_unit_test(test_simulation_annex_a_06_08)
add_unit_test(test_simulation_annex_a_06_09)
add_unit_test(test_simulation_annex_a_06_10)
add_unit_test(test_simulation_annex_a_06_11)
add_unit_test(test_simulation_annex_a_06_12)
add_unit_test(test_simulation_annex_a_07_01)
add_unit_test(test_simulation_annex_a_07_02)
add_unit_test(test_simulation_annex_a_07_03)
add_unit_test(test_simulation_annex_a_07_04)
add_unit_test(test_simulation_annex_a_07_05)
add_unit_test(test_simulation_annex_a_07_05_01)
add_unit_test(test_simulation_annex_a_07_05_02)
add_unit_test(test_simulation_annex_a_07_05_03)
add_unit_test(test_simulation_annex_a_08_01)
add_unit_test(test_simulation_annex_a_08_02)
add_unit_test(test_simulation_annex_a_08_03)
add_unit_test(test_simulation_annex_a_08_04)
add_unit_test(test_simulation_annex_a_08_05)
add_unit_test(test_simulation_annex_a_08_06)
add_unit_test(test_simulation_annex_a_08_07)
add_unit_test(test_simulation_annex_h_07)
add_unit_test(test_simulation_annex_h_09)
add_unit_test(test_simulation_annex_h_12)
add_unit_test(test_simulation_annex_i_03a)
add_unit_test(test_simulation_annex_i_03b)
add_unit_test(test_simulation_annex_k_02)
add_unit_test(test_simulation_annex_l_02)
add_unit_test(test_simulation_clause_04_02)
add_unit_test(test_simulation_clause_04_03)
add_unit_test(test_simulation_clause_04_04)
add_unit_test(test_simulation_clause_04_04_01)
add_unit_test(test_simulation_clause_04_04_02)
add_unit_test(test_simulation_clause_04_04_02_01)
add_unit_test(test_simulation_clause_04_04_02_02)
add_unit_test(test_simulation_clause_04_04_02_03)
add_unit_test(test_simulation_clause_04_04_02_04)
add_unit_test(test_simulation_clause_04_04_02_05)
add_unit_test(test_simulation_clause_04_04_02_06)
add_unit_test(test_simulation_clause_04_04_02_07)
add_unit_test(test_simulation_clause_04_04_02_08)
add_unit_test(test_simulation_clause_04_04_02_09)
add_unit_test(test_simulation_clause_04_04_03)
add_unit_test(test_simulation_clause_04_04_03_01)
add_unit_test(test_simulation_clause_04_04_03_02)
add_unit_test(test_simulation_clause_04_04_03_03)
add_unit_test(test_simulation_clause_04_04_03_04)
add_unit_test(test_simulation_clause_04_04_03_05)
add_unit_test(test_simulation_clause_04_04_03_06)
add_unit_test(test_simulation_clause_04_04_03_07)
add_unit_test(test_simulation_clause_04_04_03_08)
add_unit_test(test_simulation_clause_04_04_03_09)
add_unit_test(test_simulation_clause_04_04_03_10)
add_unit_test(test_simulation_clause_04_05a)
add_unit_test(test_simulation_clause_04_05b)
add_unit_test(test_simulation_clause_04_05c)
add_unit_test(test_simulation_clause_04_06)
add_unit_test(test_simulation_clause_04_07)
add_unit_test(test_simulation_clause_04_08)
add_unit_test(test_simulation_clause_04_09)
add_unit_test(test_simulation_clause_04_09_01)
add_unit_test(test_simulation_clause_04_09_02)
add_unit_test(test_simulation_clause_04_09_03)
add_unit_test(test_simulation_clause_04_09_04)
add_unit_test(test_simulation_clause_04_09_05a)
add_unit_test(test_simulation_clause_04_09_05b)
add_unit_test(test_simulation_clause_04_09_06)
add_unit_test(test_simulation_clause_04_09_07)
add_unit_test(test_simulation_clause_04_10)
add_unit_test(test_simulation_clause_05_02)
add_unit_test(test_simulation_clause_05_03)
add_unit_test(test_simulation_clause_05_04)
add_unit_test(test_simulation_clause_05_05)
add_unit_test(test_simulation_clause_05_06)
add_unit_test(test_simulation_clause_05_06_01)
add_unit_test(test_simulation_clause_05_06_02)
add_unit_test(test_simulation_clause_05_06_03)
add_unit_test(test_simulation_clause_05_06_04)
add_unit_test(test_simulation_clause_05_07)
add_unit_test(test_simulation_clause_05_07_01a)
add_unit_test(test_simulation_clause_05_07_01b)
add_unit_test(test_simulation_clause_05_07_01c)
add_unit_test(test_simulation_clause_05_07_02)
add_unit_test(test_simulation_clause_05_08)
add_unit_test(test_simulation_clause_05_09)
add_unit_test(test_simulation_clause_05_09_01)
add_unit_test(test_simulation_clause_05_10)
add_unit_test(test_simulation_clause_05_11)
add_unit_test(test_simulation_clause_05_12)
add_unit_test(test_simulation_clause_05_13)
add_unit_test(test_simulation_clause_06)
add_unit_test(test_simulation_clause_06_03)
add_unit_test(test_simulation_clause_06_06_02)
add_unit_test(test_simulation_clause_06_06_03)
add_unit_test(test_simulation_clause_06_06_04)
add_unit_test(test_simulation_clause_06_06_05)
add_unit_test(test_simulation_clause_06_06_06)
add_unit_test(test_simulation_clause_06_06_07)
add_unit_test(test_simulation_clause_06_07)
add_unit_test(test_simulation_clause_06_07_01)
add_unit_test(test_simulation_clause_06_07_03)
add_unit_test(test_simulation_clause_06_08)
add_unit_test(test_simulation_clause_06_12)
add_unit_test(test_simulation_clause_06_14)
add_unit_test(test_simulation_clause_06_16)
add_unit_test(test_simulation_clause_06_16_01)
add_unit_test(test_simulation_clause_06_16_02)
add_unit_test(test_simulation_clause_06_16_03)
add_unit_test(test_simulation_clause_06_16_04)
add_unit_test(test_simulation_clause_06_16_05)
add_unit_test(test_simulation_clause_06_16_06)
add_unit_test(test_simulation_clause_06_16_07)
add_unit_test(test_simulation_clause_06_16_08)
add_unit_test(test_simulation_clause_06_16_09)
add_unit_test(test_simulation_clause_06_16_10)
add_unit_test(test_simulation_clause_06_16_11)
add_unit_test(test_simulation_clause_06_16_12)
add_unit_test(test_simulation_clause_06_16_13)
add_unit_test(test_simulation_clause_06_16_14)
add_unit_test(test_simulation_clause_06_16_15)
add_unit_test(test_simulation_clause_06_17)
add_unit_test(test_simulation_clause_06_20)
add_unit_test(test_simulation_clause_06_24)
add_unit_test(test_simulation_clause_07_02)
add_unit_test(test_simulation_clause_07_04)
add_unit_test(test_simulation_clause_07_04_05)
add_unit_test(test_simulation_clause_07_05a)
add_unit_test(test_simulation_clause_07_05b)
add_unit_test(test_simulation_clause_07_08_06)
add_unit_test(test_simulation_clause_07_08a)
add_unit_test(test_simulation_clause_07_08b)
add_unit_test(test_simulation_clause_07_09)
add_unit_test(test_simulation_clause_07_10)
add_unit_test(test_simulation_clause_07_12)
add_unit_test(test_simulation_clause_08_04)
add_unit_test(test_simulation_clause_08_05)
add_unit_test(test_simulation_clause_08_06)
add_unit_test(test_simulation_clause_08_07)
add_unit_test(test_simulation_clause_08_09)
add_unit_test(test_simulation_clause_08_10)
add_unit_test(test_simulation_clause_08_11)
add_unit_test(test_simulation_clause_08_12)
add_unit_test(test_simulation_clause_08_13)
add_unit_test(test_simulation_clause_08_14)
add_unit_test(test_simulation_clause_08_16)
add_unit_test(test_simulation_clause_08_17)
add_unit_test(test_simulation_clause_08_20)
add_unit_test(test_simulation_clause_08_21)
add_unit_test(test_simulation_clause_08_22)
add_unit_test(test_simulation_clause_08_23)
add_unit_test(test_simulation_clause_08_24)
add_unit_test(test_simulation_clause_08_25)
add_unit_test(test_simulation_clause_09_02)
add_unit_test(test_simulation_clause_09_02_01)
add_unit_test(test_simulation_clause_09_02_02)
add_unit_test(test_simulation_clause_09_02_02_02)
add_unit_test(test_simulation_clause_09_02_03)
add_unit_test(test_simulation_clause_09_03_02)
add_unit_test(test_simulation_clause_09_04_01a)
add_unit_test(test_simulation_clause_09_04_01b)
add_unit_test(test_simulation_clause_09_04_02_01)
add_unit_test(test_simulation_clause_09_04_02_02)
add_unit_test(test_simulation_clause_09_04_02a)
add_unit_test(test_simulation_clause_09_04_02b)
add_unit_test(test_simulation_clause_09_04_02c)
add_unit_test(test_simulation_clause_09_04_03a)
add_unit_test(test_simulation_clause_09_04_03b)
add_unit_test(test_simulation_clause_09_04_05)
add_unit_test(test_simulation_clause_09_05)
add_unit_test(test_simulation_clause_09_06_01)
add_unit_test(test_simulation_clause_09_06_02)
add_unit_test(test_simulation_clause_09_06_03)
add_unit_test(test_simulation_clause_10_03)
add_unit_test(test_simulation_clause_10_04_01)
add_unit_test(test_simulation_clause_10_04_01a)
add_unit_test(test_simulation_clause_10_04_01b)
add_unit_test(test_simulation_clause_10_04_02a)
add_unit_test(test_simulation_clause_10_04_02b)
add_unit_test(test_simulation_clause_10_06_01)
add_unit_test(test_simulation_clause_10_06_02a)
add_unit_test(test_simulation_clause_10_06_02b)
add_unit_test(test_simulation_clause_10_09)
add_unit_test(test_simulation_clause_10_09_02)
add_unit_test(test_simulation_clause_10_10)
add_unit_test(test_simulation_clause_11_04_01a)
add_unit_test(test_simulation_clause_11_04_01b)
add_unit_test(test_simulation_clause_11_04_02a)
add_unit_test(test_simulation_clause_11_04_02b)
add_unit_test(test_simulation_clause_11_04_03)
add_unit_test(test_simulation_clause_11_04_03a)
add_unit_test(test_simulation_clause_11_04_03b)
add_unit_test(test_simulation_clause_11_04_03c)
add_unit_test(test_simulation_clause_11_04_04a)
add_unit_test(test_simulation_clause_11_04_04b)
add_unit_test(test_simulation_clause_11_04_05a)
add_unit_test(test_simulation_clause_11_04_05b)
add_unit_test(test_simulation_clause_11_04_05c)
add_unit_test(test_simulation_clause_11_04_06)
add_unit_test(test_simulation_clause_11_04_07)
add_unit_test(test_simulation_clause_11_04_08a)
add_unit_test(test_simulation_clause_11_04_08b)
add_unit_test(test_simulation_clause_11_04_08c)
add_unit_test(test_simulation_clause_11_04_09)
add_unit_test(test_simulation_clause_11_04_11a)
add_unit_test(test_simulation_clause_11_04_11b)
add_unit_test(test_simulation_clause_11_04_12)
add_unit_test(test_simulation_clause_11_04_13a)
add_unit_test(test_simulation_clause_11_04_13b)
add_unit_test(test_simulation_clause_11_04_13c)
add_unit_test(test_simulation_clause_11_04_14)
add_unit_test(test_simulation_clause_11_05)
add_unit_test(test_simulation_clause_11_05_01)
add_unit_test(test_simulation_clause_11_07)
add_unit_test(test_simulation_clause_11_09a)
add_unit_test(test_simulation_clause_11_09b)
add_unit_test(test_simulation_clause_11_09c)
add_unit_test(test_simulation_clause_11_12)
add_unit_test(test_simulation_clause_11_12a)
add_unit_test(test_simulation_clause_11_12b)
add_unit_test(test_simulation_clause_12_04)
add_unit_test(test_simulation_clause_12_04_02)
add_unit_test(test_simulation_clause_12_05)
add_unit_test(test_simulation_clause_12_05_01)
add_unit_test(test_simulation_clause_12_05_02)
add_unit_test(test_simulation_clause_12_06)
add_unit_test(test_simulation_clause_12_07)
add_unit_test(test_simulation_clause_13)
add_unit_test(test_simulation_clause_13_03)
add_unit_test(test_simulation_clause_13_04_01)
add_unit_test(test_simulation_clause_13_04_02)
add_unit_test(test_simulation_clause_13_04_03)
add_unit_test(test_simulation_clause_13_04a)
add_unit_test(test_simulation_clause_13_04b)
add_unit_test(test_simulation_clause_13_05_02)
add_unit_test(test_simulation_clause_13_05_03)
add_unit_test(test_simulation_clause_13_05_04)
add_unit_test(test_simulation_clause_13_05a)
add_unit_test(test_simulation_clause_13_05b)
add_unit_test(test_simulation_clause_14_03)
add_unit_test(test_simulation_clause_14_03a)
add_unit_test(test_simulation_clause_14_03b)
add_unit_test(test_simulation_clause_14_04)
add_unit_test(test_simulation_clause_14_04a)
add_unit_test(test_simulation_clause_14_04b)
add_unit_test(test_simulation_clause_14_05)
add_unit_test(test_simulation_clause_14_06)
add_unit_test(test_simulation_clause_14_10)
add_unit_test(test_simulation_clause_14_11)
add_unit_test(test_simulation_clause_14_12)
add_unit_test(test_simulation_clause_14_13)
add_unit_test(test_simulation_clause_14_13a)
add_unit_test(test_simulation_clause_14_13b)
add_unit_test(test_simulation_clause_14_14)
add_unit_test(test_simulation_clause_14_16)
add_unit_test(test_simulation_clause_14_16a)
add_unit_test(test_simulation_clause_14_16b)
add_unit_test(test_simulation_clause_15_03)
add_unit_test(test_simulation_clause_15_03_01)
add_unit_test(test_simulation_clause_15_03_02)
add_unit_test(test_simulation_clause_15_03_04)
add_unit_test(test_simulation_clause_15_04)
add_unit_test(test_simulation_clause_15_04_01)
add_unit_test(test_simulation_clause_15_04_02)
add_unit_test(test_simulation_clause_15_04_05)
add_unit_test(test_simulation_clause_15_04_06)
add_unit_test(test_simulation_clause_15_04_07)
add_unit_test(test_simulation_clause_15_05)
add_unit_test(test_simulation_clause_15_05_01)
add_unit_test(test_simulation_clause_15_05_02)
add_unit_test(test_simulation_clause_16_04)
add_unit_test(test_simulation_clause_16_09)
add_unit_test(test_simulation_clause_16_09_01)
add_unit_test(test_simulation_clause_16_09_02a)
add_unit_test(test_simulation_clause_16_09_02b)
add_unit_test(test_simulation_clause_16_09_03)
add_unit_test(test_simulation_clause_16_09_04)
add_unit_test(test_simulation_clause_16_09_05)
add_unit_test(test_simulation_clause_16_09_06)
add_unit_test(test_simulation_clause_16_09_07)
add_unit_test(test_simulation_clause_16_09_08)
add_unit_test(test_simulation_clause_16_09_09)
add_unit_test(test_simulation_clause_16_12_07)
add_unit_test(test_simulation_clause_16_12_08)
add_unit_test(test_simulation_clause_16_12_09)
add_unit_test(test_simulation_clause_16_12_10)
add_unit_test(test_simulation_clause_16_14)
add_unit_test(test_simulation_clause_16_15)
add_unit_test(test_simulation_clause_18_13a)
add_unit_test(test_simulation_clause_18_13b)
add_unit_test(test_simulation_clause_18_16)
add_unit_test(test_simulation_clause_20_03a)
add_unit_test(test_simulation_clause_20_03b)
add_unit_test(test_simulation_clause_20_04)
add_unit_test(test_simulation_clause_20_05)
add_unit_test(test_simulation_clause_20_07)
add_unit_test(test_simulation_clause_20_08)
add_unit_test(test_simulation_clause_20_08_02)
add_unit_test(test_simulation_clause_20_09)
add_unit_test(test_simulation_clause_20_10a)
add_unit_test(test_simulation_clause_20_10b)
add_unit_test(test_simulation_clause_20_11a)
add_unit_test(test_simulation_clause_20_11b)
add_unit_test(test_simulation_clause_20_12)
add_unit_test(test_simulation_clause_20_13)
add_unit_test(test_simulation_clause_20_14)
add_unit_test(test_simulation_clause_20_15)
add_unit_test(test_simulation_clause_20_16)
add_unit_test(test_simulation_clause_20_17)
add_unit_test(test_simulation_clause_21_02_01a)
add_unit_test(test_simulation_clause_21_02_01b)
add_unit_test(test_simulation_clause_21_02a)
add_unit_test(test_simulation_clause_21_02b)
add_unit_test(test_simulation_clause_21_03_04)
add_unit_test(test_simulation_clause_21_03_05)
add_unit_test(test_simulation_clause_21_03_06)
add_unit_test(test_simulation_clause_21_03_07)
add_unit_test(test_simulation_clause_21_03_08)
add_unit_test(test_simulation_clause_21_07_01_02)
add_unit_test(test_simulation_clause_21_07_01_03)
add_unit_test(test_simulation_clause_21_07_02_01)
add_unit_test(test_simulation_clause_21_07_02_02)
add_unit_test(test_simulation_clause_21_07_02_03)
add_unit_test(test_simulation_clause_24)
add_unit_test(test_simulation_clause_24_04)
add_unit_test(test_simulation_clause_27_05)
add_unit_test(test_simulation_clause_28_04)
add_unit_test(test_simulation_clause_28_05)
add_unit_test(test_simulation_clause_28_06)
add_unit_test(test_simulation_clause_28_07)
add_unit_test(test_simulation_clause_28_08)
add_unit_test(test_simulation_clause_28_09)
add_unit_test(test_simulation_clause_28_10)
add_unit_test(test_simulation_clause_28_11)
add_unit_test(test_simulation_clause_28_12)
add_unit_test(test_simulation_clause_28_12_01)
add_unit_test(test_simulation_clause_28_12_04)
add_unit_test(test_simulation_clause_28_13)
add_unit_test(test_simulation_clause_28_14)
add_unit_test(test_simulation_clause_28_15_01)
add_unit_test(test_simulation_clause_28_15_02)
add_unit_test(test_simulation_clause_28_15_03)
add_unit_test(test_simulation_clause_28_16a)
add_unit_test(test_simulation_clause_28_16b)
add_unit_test(test_simulation_clause_29_03_06)
add_unit_test(test_simulation_clause_29_04)
add_unit_test(test_simulation_clause_29_05)
add_unit_test(test_simulation_clause_29_06)
add_unit_test(test_simulation_clause_29_07)
add_unit_test(test_simulation_clause_29_09)
add_unit_test(test_simulation_clause_29_10)
add_unit_test(test_simulation_clause_30_04)
add_unit_test(test_simulation_clause_30_05)
add_unit_test(test_simulation_clause_31_03)
add_unit_test(test_simulation_clause_32)
add_unit_test(test_simulation_clause_35_03)
add_unit_test(test_simulation_clause_35_05)
add_unit_test(test_simulation_clause_35_06a)
add_unit_test(test_simulation_clause_35_06b)
add_unit_test(test_simulation_clause_35_07a)
add_unit_test(test_simulation_clause_35_07b)
add_unit_test(test_simulation_clause_38_02)
add_unit_test(test_simulation_clause_38_04)
add_unit_test(test_simulation_clause_38_06)
add_unit_test(test_simulation_clause_38_11)
add_unit_test(test_simulation_clause_38_15)
add_unit_test(test_simulation_clause_38_17)
add_unit_test(test_simulation_clause_38_18)
add_unit_test(test_simulation_clause_38_19)
add_unit_test(test_simulation_clause_38_21)
add_unit_test(test_simulation_clause_38_22)
add_unit_test(test_simulation_clause_38_23)
add_unit_test(test_simulation_clause_38_34)
add_unit_test(test_simulation_clause_38_36)
add_unit_test(test_simulation_clause_38_37)
add_unit_test(test_simulation_clause_38_38)
add_unit_test(test_simulation_clause_39_04)
add_unit_test(test_simulation_clause_39_05)
add_unit_test(test_simulation_clause_40_03)
add_unit_test(test_simulation_clause_41)
add_unit_test(test_simulation_clause_non_lrma)
add_unit_test(test_simulation_clause_non_lrmb)
add_unit_test(test_simulation_clause_non_lrmc)
add_unit_test(test_simulation_clause_non_lrmd)
add_unit_test(test_source_text_b)
add_unit_test(test_source_text_c)
add_unit_test(test_synthesis_clause_09_02_01)
add_unit_test(test_synthesis_clause_09_02_02_02)
add_unit_test(test_synthesis_clause_09_02_02_03)
add_unit_test(test_synthesis_clause_09_02_02_04)
add_unit_test(test_synthesis_clause_09_04_01)
add_unit_test(test_synthesis_clause_10_03)
add_unit_test(test_synthesis_clause_18_13)
add_unit_test(test_synthesis_clause_23_02)
add_unit_test(test_synthesis_clause_non_lrma)
add_unit_test(test_synthesis_clause_non_lrmb)
add_unit_test(test_synthesis_clause_non_lrmc)
add_unit_test(test_vpi_annex_m_02)
add_unit_test(test_vpi_clause_39_04)
add_unit_test(test_vpi_clause_39_05)
add_unit_test(test_vpi_clause_40_05)
